css/menu.css
html {
	height:100%;
}

body {
    margin:0px;
    padding:0px;
    background-image:linear-gradient(top, rgba(163, 232, 255, 0.596) 70%, rgb(137, 208, 230));
    background-image:-webkit-linear-gradient(top, rgba(163, 232, 255, 0.596) 70%, rgb(136, 208, 230));
	min-width:100%;
	padding-top:60px;
	background-size: cover;
	background-repeat: no-repeat;
}

.scrollable {
	overflow-y: hidden;
	overflow-x: auto;
}

.fixedCenter {
    position:fixed;
    left:50%;
    top:50%;
    transform: translate(-50%, -50%);
}

.textCenter {
    text-align: center;
}

.absolutePointEle {
	top:0;
	left:0;
	margin:0;
	padding:0;
}

.centerCont {
	width:100%;
	text-align: center;
}

.centerItem {
	margin-left:auto;
	margin-right:auto;
}

.fixedEle {
	position: fixed;
}

.left_rightCenter {
	margin-left:auto;
	margin-right:auto;
}


/* --------------
   Mobile design (Mobile first Design)
   --------------
*/
#mainPage {

}

#mainPage input[type=submit] {
	float:right;
}

#navContainer {
	height:40px;
	width:99%;
	padding-top:15px;
	z-index:100;
}

#mainTitle {
	font-size:1.5em;
	font-family: 'Times New Roman', Times, serif;
	font-weight:900;
	margin-left:20px;
}

#weatherIcon{
	width:100px;
	height:100px;
}

#dropDown {
	float:right;
	margin-right:20px;
	cursor:pointer;
}

#dropDown div {
	width:30px;
	height:5px;
	background-color: black;
	margin-top:3px;
}

#navItems {
	top:-230px;
	padding-top:100px;
	padding-bottom:20px;
	height:100px;
	background-color:rgb(64,64,64);
	z-index:100;
}

#navItems li {
	display:block;
	width:100vw;
	background-color: transparent;
	font-size:1em;
	font-family:Verdana, Geneva, Tahoma, sans-serif;
	font-weight:900;
	padding-top:10px;
	padding-bottom:10px;
	color:white;
	margin-left:40px;
}

#mainSearchBox {
	width:50vw;
	height:25px;
	font-size:2em;
	padding:10px;
	border-radius:5px;
	border:none;
	background-color: white;
	font-family: monospace;
	font-weight: 900;
	transition: width 0.3s, height 0.3s, box-shadow 0.3s, font-size 0.3s;
}

#mainSearchBox:focus {
	width:55vw;
	height:35px;
	font-size:2.2em;
	box-shadow: 0px 4px 3px grey;
}

footer {
	position: absolute;
	bottom:0;
	width:100%;
	padding-top:10px;
	padding-bottom:10px;
	text-align: center;
	font-weight: 900;
	font-size:12px;
	font-family:verdana;
	background-color: rgb(66,165,195) ;
	color:white;
}


/* --------------
   Animations
   --------------
*/ 
.fade-in-left {
	-webkit-animation-duration: 1s;
	animation-delay:0.5s;
	animation-duration: 1s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
	animation-name: fadeInLeft;
}

.fade-out {
	animation-duration:1s;
	animation-name:fadeOut;
	opacity:0;
	display:hidden;
}

.fade-out-up {
	animation-duration:0.5s;
	animation-name:fadeOutUp;
}

.fade-in-down {
	animation-duration:0.5s;
	animation-name:fadeInDown;
}

.turn-white {
	animation-duration:0.4s;
	animation-name:turnWhite;
}

.turn-black {
	animation-duration:0.4s;
	animation-name:turnBlack;
}

.bg-turn-black {
	animation-duration:0.4s;
	animation-name:bgTurnBlack;
}

.bg-turn-white {
	animation-duration:0.4s;
	animation-name:bgTurnWhite;
}

@-webkit-keyframes fadeInLeft {
	0% {
		opacity: 0;
		-webkit-transform: translateX(-20px);
	}
	100% {
		opacity: 1;
		-webkit-transform: translateX(0);
	}
}
	
@keyframes fadeInLeft {
	0% {
		opacity: 0;
		transform: translateX(-10px);
	}
	100% {
		opacity: 1;
		transform: translateX(0);
	}
}
	
@keyframes fadeOut {
	0% {
		opacity:1;
		transform: translateX(0px);
	}
	100% {
		opacity:0;
		transform: translateX(10px);
	}
}

@keyframes fadeOutUp {
	0% {
		opacity:1;
		top:0px;
	}
	100% {
		opacity:0;
		top:-230px;
	}
}

@keyframes fadeInDown {
	0% {
		opacity:0;
		top:-230px;
	}
	100% {
		opacity:1;
		top:0px;
	}
}

@keyframes turnWhite {
	0% {
		color:black;
	}
	100% {
		color:white;
	}
}

@keyframes turnBlack {
	0% {
		color:white;
	}
	100% {
		color:black;
	}
}

@keyframes bgTurnBlack {
	0% {
		background-color:white;
	}
	100% {
		background-color:black;
	}
}

@keyframes bgTurnWhite {
	0% {
		background-color:black;
	}
	100% {
		background-color:white;
	}
}

